--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
           <a href="index.html">
             <li>Home</li>
           </a>
-          <li>Posts</li>
+         <a href="post.html">
+           <li>Posts</li>
+         </a>
           <li>
             <i class="fa fa-instagram"></i>
           </li>
